--- a/app/views/parents/new.html.erb
+++ b/app/views/parents/new.html.erb
@@ -3,19 +3,19 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@teacher) do |f| %>
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-
+    <%= form_for(@parent) do |f| %>
     <%= f.label :name %>
-    <%= f.email_field :name %>
+    <%= f.text_field :name %>
+
+    <%= f.label :email %>
+    <%= f.email_field :email %>
 
     <%= f.label :password %>
-    <%= f.password_field :password_digest %>
+    <%= f.password_field :password %>
 
     <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
 
-<%= link_to 'Back', teachers_path %>
+<%= link_to 'Back', parents_path %>
