--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -1,4 +1,14 @@
 <p id="notice"><%= notice %></p>
+<% provide(:title, @teacher.parent_name) %>
+<div class="row">
+  <aside class="col-md-4">
+    <section class="user_info">
+      <h1>
+        <%= @teacher.parent_name %>
+      </h1>
+    </section>
+  </aside>
+</div>
 
 <p>
   <strong>Email</strong>
@@ -7,12 +17,12 @@
 
 <p>
   <strong>Name</strong>
-  <%= @teacher.name %>
+  <%= @teacher.name  %>
 </p>
 
 <p>
   <strong>Password</strong>
-  <%= @teacher.password %>
+  <%= @teacher.password_digest %>
 </p>
 
 <%= link_to 'Edit', edit_teacher_path(@teacher) %> |
